--- a/_posts/2025-7-6-1.md
+++ b/_posts/2025-7-6-1.md
@@ -20,6 +20,8 @@ words:
   - 题解：拉格朗日插值
   - Lagrange插值法
   - Lagrange 插值法
+  - "题解：CF622F The Sum of the k-th Powers"
+  - 自然数幂次和
 ---
 
 > [例题传送门](https://www.luogu.com.cn/problem/P4781)
@@ -54,7 +56,7 @@ $$
 f(x_i)=\sum_{j=1}^ny_j\prod_{k\neq j}\frac{x_i-x_k}{x_j-x_k}
 $$
 
-若 $j\neq i$，则在 $y_j\prod\limits_{k\neq j}\dfrac{x_i-x_k}{x_j-x_k}$ 中必然存在 $k=i$，使得 $x_i-x_k=0$，从而使整个乘积为 $0$。
+若 $j\neq i$，则在 $\displaystyle y_j\prod\limits_{k\neq j}\dfrac{x_i-x_k}{x_j-x_k}$ 中必然存在 $k=i$，使得 $x_i-x_k=0$，从而使整个乘积为 $0$。
 
 因此：
 
@@ -81,9 +83,9 @@ f(x)&=\sum_{i=1}^ny_i\prod_{j\neq i}\frac{x-x_j}{x_i-x_j}\\
 \end{aligned}
 $$
 
-对于 $\prod\limits_{j=1}^n(x-j)$ 显然是可以 $\mathcal O(n)$ 处理出来的，除以 $x-i$ 即可得到分子。
+对于 $\displaystyle\prod\limits_{j=1}^n(x-j)$ 显然是可以 $\mathcal O(n)$ 处理出来的，除以 $x-i$ 即可得到分子。
 
-而对于分母 $\prod\limits_{j\neq i}(i-j)$，有：
+而对于分母 $\displaystyle\prod\limits_{j\neq i}(i-j)$，有：
 
 $$
 \prod_{j\neq i}(i-j)=(-1)^{n-i}(i-1)!(n-i)!
@@ -112,7 +114,7 @@ $$
         不难发现，$i-j$ 可以转化为 $j-i$ 计算再给整体乘 $-1$。则 $i-j<0$ 有 $n-i$ 个 $j$，即整体乘 $(-1)^{n-i}$。
     </p>
     <p>
-        因此就可以拆成阶乘，$i<j$ 部分是 $(i-1)!$，$i>j$ 部分是 $(n-i)!$，于是便得到上式。
+        因此就可以拆成阶乘，$i&lt;j$ 部分是 $(n-i)!$，而 $i>j$ 部分是 $(i-1)!$，于是便得到上式。
     </p>
 </details>
 
@@ -125,7 +127,222 @@ f(x)&=\sum_{i=1}^ny_i\frac{\frac{\prod\limits_{j=1}^n(x-j)}{x-i}}{(-1)^{n-i}(i-1
 \end{aligned}
 $$
 
-只需要预处理 $1\sim n$ 的阶乘及其逆元与 $\prod\limits_{j=1}^n(x-j)$ 即可做到单次计算复杂度 $\mathcal O(n)$。
+只需要预处理 $1\sim n$ 的阶乘及其逆元、$x-i$ 的逆元与 $\displaystyle\prod\limits_{j=1}^n(x-j)$ 即可做到单次计算复杂度 $\mathcal O(n)$。如果预处理 $x-j$ 前后缀积， 则可以避免求 $x-i$ 的逆元。
+
+这常用于求解**自然数幂次和**，即 $\displaystyle\sum\limits_{i=1}^ni^k$。当 $n$ 较小时可以使用**线性筛**做到 $\mathcal O\left(\dfrac{n}{\ln n}\log k\right)$ 求解。（若 $n,k$ 同阶，则复杂度为 $\mathcal O(n)$）
+
+$n$ 较大时，则可以使用**拉格朗日插值**求解。可以证明，$\displaystyle\sum\limits_{i=1}^ni^k$ 一定是一个**关于 $n$ 的 $k+1$ 次多项式**，因此线性筛找 $k+2$ 个值，插值即可。时间复杂度 $\mathcal O(k)$。
+
+<details class="success">
+    <summary>参考代码</summary>
+    <p>
+        这是经典题目<a href="https://www.luogu.com.cn/problem/CF622F">CF622F The Sum of the k-th Powers</a>的参考代码。使用维护前后缀积的写法。
+    </p>
+<div class="language-cpp highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57
+58
+59
+60
+61
+62
+63
+64
+65
+66
+67
+68
+69
+70
+71
+72
+73
+74
+75
+76
+77
+78
+79
+80
+81
+82
+83
+84
+85
+86
+87
+88
+89
+90
+91
+92
+93
+94
+95
+96
+97
+98
+99
+100
+101
+</pre></td><td class="rouge-code"><pre><span class="c1">//#include&lt;bits/stdc++.h&gt;</span>
+<span class="cp">#include</span><span class="cpf">&lt;algorithm&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iostream&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstring&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;iomanip&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cstdio&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;string&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;vector&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;cmath&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;ctime&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;deque&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;queue&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;stack&gt;</span><span class="cp">
+#include</span><span class="cpf">&lt;list&gt;</span><span class="cp">
+</span><span class="k">using</span> <span class="k">namespace</span> <span class="n">std</span><span class="p">;</span>
+<span class="k">constexpr</span> <span class="k">const</span> <span class="kt">int</span> <span class="n">N</span><span class="o">=</span><span class="mf">1e9</span><span class="p">,</span><span class="n">K</span><span class="o">=</span><span class="mf">1e6</span><span class="p">,</span><span class="n">P</span><span class="o">=</span><span class="mf">1e9</span><span class="o">+</span><span class="mi">7</span><span class="p">;</span>
+<span class="kt">int</span> <span class="nf">qpow</span><span class="p">(</span><span class="kt">int</span> <span class="n">base</span><span class="p">,</span><span class="kt">int</span> <span class="n">n</span><span class="p">){</span>
+	<span class="kt">int</span> <span class="n">ans</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+	<span class="k">while</span><span class="p">(</span><span class="n">n</span><span class="p">){</span>
+		<span class="k">if</span><span class="p">(</span><span class="n">n</span><span class="o">&amp;</span><span class="mi">1</span><span class="p">){</span>
+			<span class="n">ans</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">ans</span><span class="o">*</span><span class="n">base</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+		<span class="p">}</span>
+		<span class="n">base</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">base</span><span class="o">*</span><span class="n">base</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+		<span class="n">n</span><span class="o">&gt;&gt;=</span><span class="mi">1</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">return</span> <span class="n">ans</span><span class="p">;</span>
+<span class="p">}</span> 
+<span class="kt">int</span> <span class="n">y</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">fact</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">invFact</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">];</span>
+<span class="kt">void</span> <span class="nf">pre</span><span class="p">(</span><span class="kt">int</span> <span class="n">k</span><span class="p">){</span>
+	<span class="n">fact</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="n">fact</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">fact</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">*</span><span class="n">i</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="n">invFact</span><span class="p">[</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">]</span><span class="o">=</span><span class="n">qpow</span><span class="p">(</span><span class="n">fact</span><span class="p">[</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">],</span><span class="n">P</span><span class="o">-</span><span class="mi">2</span><span class="p">);</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="n">k</span><span class="o">+</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&gt;=</span><span class="mi">0</span><span class="p">;</span><span class="n">i</span><span class="o">--</span><span class="p">){</span>
+		<span class="n">invFact</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="n">invFact</span><span class="p">[</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span><span class="o">*</span><span class="p">(</span><span class="n">i</span><span class="o">+</span><span class="mi">1ll</span><span class="p">)</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+
+	<span class="k">static</span> <span class="kt">int</span> <span class="n">vis</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">prime</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">size</span><span class="p">;</span>
+	<span class="n">y</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="k">if</span><span class="p">(</span><span class="o">!</span><span class="n">vis</span><span class="p">[</span><span class="n">i</span><span class="p">]){</span>
+			<span class="n">vis</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="n">i</span><span class="p">;</span>
+			<span class="n">prime</span><span class="p">[</span><span class="o">++</span><span class="n">size</span><span class="p">]</span><span class="o">=</span><span class="n">i</span><span class="p">;</span>
+			<span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="n">qpow</span><span class="p">(</span><span class="n">i</span><span class="p">,</span><span class="n">k</span><span class="p">);</span>
+		<span class="p">}</span>
+		<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">j</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">j</span><span class="o">&lt;=</span><span class="n">size</span><span class="o">&amp;&amp;</span><span class="n">i</span><span class="o">*</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">]</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">j</span><span class="o">++</span><span class="p">){</span>
+			<span class="n">vis</span><span class="p">[</span><span class="n">i</span><span class="o">*</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">]]</span><span class="o">=</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">];</span>
+			<span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="o">*</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">]]</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">*</span><span class="n">y</span><span class="p">[</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">]]</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+			<span class="k">if</span><span class="p">(</span><span class="n">i</span><span class="o">%</span><span class="n">prime</span><span class="p">[</span><span class="n">j</span><span class="p">]</span><span class="o">==</span><span class="mi">0</span><span class="p">){</span>
+				<span class="k">break</span><span class="p">;</span>
+			<span class="p">}</span>
+		<span class="p">}</span>
+	<span class="p">}</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="p">(</span><span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">+</span><span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">])</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+<span class="p">}</span>
+<span class="kt">int</span> <span class="nf">f</span><span class="p">(</span><span class="kt">int</span> <span class="n">n</span><span class="p">,</span><span class="kt">int</span> <span class="n">k</span><span class="p">){</span>
+	<span class="k">if</span><span class="p">(</span><span class="n">n</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">){</span>
+		<span class="k">return</span> <span class="n">y</span><span class="p">[</span><span class="n">n</span><span class="p">];</span>
+	<span class="p">}</span>
+	<span class="kt">int</span> <span class="n">ans</span><span class="o">=</span><span class="mi">0</span><span class="p">;</span>
+	<span class="k">static</span> <span class="kt">int</span> <span class="n">pre</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span><span class="n">suf</span><span class="p">[</span><span class="n">K</span><span class="o">+</span><span class="mi">2</span><span class="o">+</span><span class="mi">1</span><span class="o">+</span><span class="mi">1</span><span class="p">];</span>
+	<span class="n">pre</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">=</span><span class="n">suf</span><span class="p">[</span><span class="n">k</span><span class="o">+</span><span class="mi">3</span><span class="p">]</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span> 
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="n">pre</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">pre</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">*</span><span class="p">(</span><span class="n">n</span><span class="o">-</span><span class="n">i</span><span class="p">)</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="mi">1</span><span class="o">&lt;=</span><span class="n">i</span><span class="p">;</span><span class="n">i</span><span class="o">--</span><span class="p">){</span>
+		<span class="n">suf</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">=</span><span class="mi">1ll</span><span class="o">*</span><span class="n">suf</span><span class="p">[</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span><span class="o">*</span><span class="p">(</span><span class="n">n</span><span class="o">-</span><span class="n">i</span><span class="p">)</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">for</span><span class="p">(</span><span class="kt">int</span> <span class="n">i</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span><span class="n">i</span><span class="o">&lt;=</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="p">;</span><span class="n">i</span><span class="o">++</span><span class="p">){</span>
+		<span class="kt">int</span> <span class="n">w</span><span class="o">=</span><span class="mi">1</span><span class="p">;</span>
+		<span class="k">if</span><span class="p">(</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="o">-</span><span class="n">i</span><span class="o">&amp;</span><span class="mi">1</span><span class="p">){</span>
+			<span class="n">w</span><span class="o">=-</span><span class="mi">1</span><span class="p">;</span>
+		<span class="p">}</span>
+		<span class="n">ans</span><span class="o">=</span><span class="p">(</span><span class="n">ans</span><span class="o">+</span><span class="n">w</span><span class="o">*</span><span class="mi">1ll</span><span class="o">*</span><span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">*</span><span class="n">pre</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">%</span><span class="n">P</span><span class="o">*</span><span class="n">suf</span><span class="p">[</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">]</span><span class="o">%</span><span class="n">P</span><span class="o">*</span><span class="n">invFact</span><span class="p">[</span><span class="n">i</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span><span class="o">%</span><span class="n">P</span><span class="o">*</span><span class="n">invFact</span><span class="p">[</span><span class="n">k</span><span class="o">+</span><span class="mi">2</span><span class="o">-</span><span class="n">i</span><span class="p">]</span><span class="o">%</span><span class="n">P</span><span class="p">)</span><span class="o">%</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">if</span><span class="p">(</span><span class="n">ans</span><span class="o">&lt;</span><span class="mi">0</span><span class="p">){</span>
+		<span class="n">ans</span><span class="o">+=</span><span class="n">P</span><span class="p">;</span>
+	<span class="p">}</span>
+	<span class="k">return</span> <span class="n">ans</span><span class="p">;</span>
+<span class="p">}</span>
+<span class="kt">int</span> <span class="nf">main</span><span class="p">(){</span>
+	<span class="cm">/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/</span>
+	
+	<span class="n">ios</span><span class="o">::</span><span class="n">sync_with_stdio</span><span class="p">(</span><span class="nb">false</span><span class="p">);</span>
+	<span class="n">cin</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span><span class="n">cout</span><span class="p">.</span><span class="n">tie</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span>
+	
+	<span class="kt">int</span> <span class="n">n</span><span class="p">,</span><span class="n">k</span><span class="p">;</span>
+	<span class="n">cin</span><span class="o">&gt;&gt;</span><span class="n">n</span><span class="o">&gt;&gt;</span><span class="n">k</span><span class="p">;</span>
+	<span class="n">pre</span><span class="p">(</span><span class="n">k</span><span class="p">);</span>
+	<span class="n">cout</span><span class="o">&lt;&lt;</span><span class="n">f</span><span class="p">(</span><span class="n">n</span><span class="p">,</span><span class="n">k</span><span class="p">)</span><span class="o">&lt;&lt;</span><span class="sc">'\n'</span><span class="p">;</span>
+	
+	<span class="n">cout</span><span class="p">.</span><span class="n">flush</span><span class="p">();</span>
+	
+	<span class="cm">/*fclose(stdin);
+	fclose(stdout);*/</span>
+	<span class="k">return</span> <span class="mi">0</span><span class="p">;</span>
+<span class="p">}</span>
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+</details>
+
 
 # 例题 AC 代码
 
@@ -202,4 +419,3 @@ main(){
 	return 0;
 }
 ```
-
