--- a/_posts/2025-8-19-2.md
+++ b/_posts/2025-8-19-2.md
@@ -12,9 +12,12 @@ tags:
   - DP
   - 斜率优化 DP
   - 基础算法
+  - 李超线段树
 words:
   - "P3195 题解：[HNOI2008] 玩具装箱"
 ---
+
+# 传统斜率优化 DP
 
 > [例题：洛谷 P3195 [HNOI2008] 玩具装箱](https://www.luogu.com.cn/problem/P3195)。
 >
@@ -47,7 +50,7 @@ words:
 >
 > 答案为 $\textit{dp}_n$。时间复杂度：$\mathcal O\left(n^2\right)$，需要优化。
 
-# 递推式的整理
+## 递推式的整理
 
 考虑整理上面的递推式：
 
@@ -77,7 +80,7 @@ $$
 
 我们想高效地求出上式的最小值。
 
-# 斜率转化
+## 斜率转化
 
 考虑决策点 $j_1,j_2$，钦定 $j_1<j_2$ 且 $j_1$ 优于 $j_2$，有：
 
@@ -110,7 +113,7 @@ $$
 
 即**斜率**。
 
-# 决策点与凸包
+## 决策点与凸包
 
 因此对于每一个决策点 $j$，可以在平面直角坐标系内得到一个点：
 
@@ -154,7 +157,7 @@ $$
 
 与之对应的还有**上凸壳**，即斜率单调不升。
 
-# 实现步骤
+## 实现步骤
 
 考虑维护凸壳的具体步骤。使用一个栈来维护凸壳中的点。
 
@@ -168,11 +171,11 @@ $$
 
    当无法弹出时，加入 $A_i$。
 
-# 寻找决策点
+## 寻找决策点
 
 「寻找最优决策点」这一步一般会有两种方法，使用场景不同，复杂度也不同。
 
-## 二分
+### 二分
 
 凸壳中的斜率单调递增，因此可以二分。时间复杂度 $\mathcal O(\log n)$。
 
@@ -265,7 +268,7 @@ int main(){
 ```
 </details>
 
-## 决策单调性
+### 决策单调性
 
 发现决策点 $i$ 的限制条件 $x_i$ 是**单调递增**的，而凸壳中的斜率也是**单调递增**的。因此可以维护指针来代替二分。
 
@@ -348,6 +351,226 @@ int main(){
 	
 	cout.flush();
 	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+# 斜率不单调的情况
+
+> 现在考虑 $f_{j_1}-f_{j_2}$ 的**正负性**，这影响到**不等式的变号**。发现钦定了 $0\leq j_1<j_2$，且题目中 $\textit{pre}_i\geq 0$，因此有 $f_{j_1}<f_{j_2}$，即 $f_{j_1}-f_{j_2}<0$。
+
+但是在有一些题目中，斜率并不单调，甚至于横坐标也不单调，这无法使用传统斜率优化解决。可以使用平衡树、
+
+CDQ 分治等方法维护，此处给出一种基于**[李超线段树](./LiChao-Segment-Tree)**的方法。
+
+***
+
+> [例题：洛谷 P4027 [NOI2007] 货币兑换](https://www.luogu.com.cn/problem/P4027)。
+>
+> ***
+>
+> > 必然存在一种最优的买卖方案满足：每次买进操作使用完所有的人民币，每次卖出操作卖出所有的金券。
+>
+> 因此我们仅仅考虑这两种操作。
+>
+> 设 $\textit{dp}_i$ 为第 $i$ 天获得的**最多的钱**。特别地，钦定 $\textit{dp}_0=s$，为初始时拥有的钱。
+>
+> 记 $a_i,b_i$ 分别为第 $i$ 天 A 券、B 券的价值，$\textit{cntA}_i,\textit{cntB}_i$ 分别为第 $i$ 天用 $\textit{dp}_i$ 元买入的 A 券、B 券数量。则有：
+>
+> $$
+> \begin{cases}
+> \textit{cntA}_i\cdot a_i+\textit{cntB}_i\cdot b_i=\textit{dp}_i\\
+> \dfrac{\textit{cntA}_i}{\textit{cntB}_i}=\textit{rate}_i
+> \end{cases}
+> $$
+>
+> 不难得到：
+>
+> $$
+> \begin{aligned}
+> \textit{cntA}_i&=\textit{rate}_i\cdot\textit{cntB}_i\\
+> &=\dfrac{\textit{dp}_i\cdot\textit{rate}_i}{a_i\cdot\textit{rate}_i+b_i}\\
+> \textit{cntB}_i&=\dfrac{\textit{dp}_i}{a_i\cdot\textit{rate}_i+b_i}
+> \end{aligned}
+> $$
+>
+> 因此可得转移：
+>
+> $$
+> \textit{dp}_i=\max\left(\textit{dp}_{i-1},\max_{j=0}^{i-1}\left(\textit{cntA}_j\cdot a_i+\textit{cntB}_j\cdot b_i\right)\right)
+> $$
+>
+>
+> * 不卖出金券，为 $\textit{dp}_{i-1}$。
+> * 卖出金券，枚举上一次买入金券的时间即可。
+>
+> ***
+>
+> $\textit{dp}_{i-1}$ 是好维护的，问题来到如何快速求得 $\max\limits_{j=0}^{i-1}\left(\textit{cntA}_j\cdot a_i+\textit{cntB}_j\cdot b_i\right)$。
+
+考虑决策点 $j$ 的贡献 $\textit{cntA}_j\cdot a_i+\textit{cntB}_j\cdot b_i$。
+
+李超线段树可以向坐标系内**添加一次函数**，并查询指定位置的最大值。李超线段树维护斜率优化 DP 同样如此。
+
+$i$ 的信息是确定的，决策点 $j$ 的贡献可转化为：
+
+$$
+a_i\left(\textit{cnt}A_j+\textit{cntB}_j\cdot\dfrac{b_i}{a_i}\right)
+$$
+
+$a_i$ 确定，只需要考虑 $\textit{cnt}A_j+\textit{cntB}_j\cdot\dfrac{b_i}{a_i}$。但是 $\dfrac{b_i}{a_i}$ 此时为**定值**，可以很好的处理。
+
+那么我们就**将其贡献转化为了一次函数 $y=kx+b$ 的形式**。决策点 $j$ 对应的一次函数为：
+
+$$
+y=\textit{cntB}_j\cdot x+\textit{cntA}_j
+$$
+决策点 $j$ 对于 $i$ 的贡献在 $x=\dfrac{b_i}{a_i}$ 处在李超线段树上查询最大值即可。
+
+特别地，此处李超树维护的一次函数定义域为 $[-\infty,+\infty]$。正因此，修改复杂度为 $\mathcal O(\log n)$。
+
+<details class="note" open>
+    <summary>不要插入直线 $y=s$</summary>
+    <p>
+        即 $\textit{dp}_0$ 对应一次函数。
+    </p>
+    <p>
+        这会导致贡献算成 $a_is$。
+    </p>
+</details>
+
+区间端点并非整数，离散化即可。
+
+时间复杂度：$\mathcal O(n\log n)$，且常数较小。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e5+5;
+constexpr const double eps=1e-9;
+int n;
+double a[N+1],b[N+1],rate[N+1];
+double dp[N+1],cntA[N+1],cntB[N+1];
+int len,pos[N+1+1];
+double hashPos[N+1+1];
+struct line{
+	double k,b;
+	line(double k=0,double b=0){
+		line::k=k;
+		line::b=b;
+	}
+	double operator ()(int x){
+		return k*hashPos[x]+b;
+	}
+}line[N+1+1];
+struct LiChaoSegTree{
+	struct node{
+		int l,r;
+		int id;
+	}t[(N+1)<<2|1];
+	void build(int p,int l,int r){
+		t[p]={l,r};
+		if(l==r){
+			return;
+		}
+		int mid=l+r>>1;
+		build(p<<1,l,mid);
+		build(p<<1|1,mid+1,r);
+	}
+	bool leq(double a,double b){
+		return a-b<-eps;
+	}
+	bool geq(double a,double b){
+		return a-b>eps; 
+	}
+	bool eq(double a,double b){
+		return abs(a-b)<=eps;
+	}
+	bool check(int u,int v,int x){
+		double yU=line[u](x),yV=line[v](x);
+		return geq(yU,yV);
+	}
+	void down(int p,int x){
+		int &id=t[p].id;
+		if(t[p].l==t[p].r){
+			if(check(x,id,t[p].l)){
+				id=x;
+			}
+			return;
+		}
+		if(check(x,id,t[p<<1].r)){
+			swap(x,id);
+		}
+		if(check(x,id,t[p<<1].l)){
+			down(p<<1,x);
+		}
+		if(check(x,id,t[p<<1|1].r)){
+			down(p<<1|1,x);
+		}
+	}
+	double query(int p,int x){
+		double ans=line[t[p].id](x);
+		if(t[p].l==t[p].r){
+			return ans;
+		}
+		if(x<=t[p<<1].r){
+			ans=max(ans,query(p<<1,x));
+		}else{
+			ans=max(ans,query(p<<1|1,x));
+		}
+		return ans;
+	}
+}t;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	cin>>n>>dp[0];
+	static double tmp[N+1+1];
+	for(int i=1;i<=n;i++){
+		cin>>a[i]>>b[i]>>rate[i];
+		hashPos[i]=b[i]/a[i];
+		tmp[i]=hashPos[i];
+	}
+	hashPos[n+1]=tmp[n+1]=0;
+	sort(hashPos+1,hashPos+n+2);
+	for(int i=1;i<=n;i++){
+		pos[i]=lower_bound(hashPos+1,hashPos+n+2,tmp[i])-hashPos;
+	}
+	t.build(1,1,n+1);
+	for(int i=1;i<=n;i++){
+		dp[i]=max(dp[i-1],a[i]*t.query(1,pos[i]));
+		cntB[i]=dp[i]/(a[i]*rate[i]+b[i]);
+		cntA[i]=rate[i]*cntB[i];
+		line[i]={cntB[i],cntA[i]};
+		t.down(1,i);
+	}
+	cout<<fixed<<setprecision(3)<<dp[n]<<'\n';
+	
+	cout.flush();
+	 
 	/*fclose(stdin);
 	fclose(stdout);*/
 	return 0;
