--- a/_posts/2025-01-22-1.md
+++ b/_posts/2025-01-22-1.md
@@ -1,247 +1,130 @@
 ---
 layout: post
 title: "Splay树详解"
-subtitle: "例题：普通平衡树"
+subtitle: "例题：洛谷P3369"
 date: 2025-1-22
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - 未完
   - 题解
   - 平衡树
   - Splay
   - 提高+/省选−
   - 基础算法
 words:
-  - 题解：普通平衡树
+  - "P3369 题解：【模板】普通平衡树"
+  - "P6136 题解：【模板】普通平衡树（数据加强版）"
   - Splay详解
   - splay 树
   - 伸展树详解
 ---
 
-> 前置知识：[平衡树](/2025/01/21/9/)
+> 前置知识：[平衡树](/2025/01/21/9/)。
 >
-
-> [例题链接](https://www.luogu.com.cn/problem/P3369)
+> [例题链接](https://www.luogu.com.cn/problem/P3369)。[例题加强版链接](https://www.luogu.com.cn/problem/P6136)。
 >
-> [例题加强版链接](https://www.luogu.com.cn/problem/P6136)
-
+> ***
+>
 > 您需要写一种数据结构（可参考题目标题），来维护一些数，其中需要提供以下操作：
->
+> 
 > 1. 插入一个数 $x$。
 > 2. 删除一个数 $x$（若有多个相同的数，应只删除一个）。
 > 3. 定义**排名**为比当前数小的数的个数 $+1$。查询 $x$ 的排名。
 > 4. 查询数据结构中排名为 $x$ 的数。
 > 5. 求 $x$ 的前驱（前驱定义为小于 $x$，且最大的数）。
 > 6. 求 $x$ 的后继（后继定义为大于 $x$，且最小的数）。
->
+> 
 > 对于操作 $3,5,6$，**不保证**当前数据结构中存在数 $x$。
 
-# Splay 的思想
+Splay 树核心思路是通过 `splay` 操作不断将操作节点旋转到根节点，从而保证均摊复杂度 $\mathcal O(\log n)$。
 
-每一个操作的节点都旋转至根节点，均摊时间复杂度 $\mathcal O(\log n)$。
+并且，Splay 树其实是 `splay` 越多越快的，`splay` 操作次数越多，树的形态也就越平衡。（也就是说，可以尝试随机 `splay` 几个点，时间消耗可能会有所提升。）
 
-# 基本信息与基本操作
+Splay 的各类平衡树操作都是简单的 BST 操作，操作完之后将操作节点 `splay` 到根节点即可。
 
-## 基本信息
+# Splay 基本结构/操作
+
+以例题为例。
+
+## 节点维护信息
 
 ```cpp
 struct node{
-    int father,child[2];
-    int value,cnt,size;
+    int value,cnt;
+    int size,father,child[2];
 }t[N+1];
 ```
 
-* `father` ：父节点。
+$\textit{value}_x$ 为节点实际维护信息，$\textit{cnt}_x$ 为相同节点个数。$\textit{size}_x,\textit{father}_x,\textit{child}_{x,0},\textit{child}_{x,1}$ 分别为 $x$ 子树大小、父节点、左子节点、右子节点。
 
-* `child[2]`：`child[0]` 是**左**子节点，`child[1]` 是**右**子节点；使用 $0,1$ 可以简化操作（见下文）。
+钦定左子树的值均小于右子树的值。
 
-  在整个 Splay 树中，**左**子节点的下标都是 $0$，**右**子节点的下标都是 $1$。
+***
 
-* `value`：权值。
+同时，对于整棵平衡树而言，还需要存储整棵树的根节点 `root`。
 
-* `cnt`：重复标记。
-
-* `size`：子树大小。
-
-除此之外，还需要和 FHQ Treap 一样维护一个 `root` 表示根节点。
-
-## 基本操作
-
-### 上传更新
-
-维护节点子树大小。
+## 辅助操作
 
 ```cpp
 void up(int p){
-    t[p].size = t[t[p].child[0]].size + t[p].cnt + t[t[p].child[1]].size; 
+    t[p].size=t[t[p].child[0]].size+t[p].cnt+t[t[p].child[1]].size;
 }
-```
-
-### 判断是左子节点还是右子节点
-
-给定节点 $p$，求节点 $p$ 是其父节点的左子节点还是右子节点。
-
-```cpp
 bool check(int p){
-    return t[t[p].father].child[1] == p;
+    return t[t[p].father].child[1]==p;
 }
 ```
 
-其实判断的是“是否为右子节点”，然而“是右子节点”返回 $1$，“不是右子节点”（即“是左子节点”）返回 $0$，对应左、右子节点。
+`up` 操作用于更新子树大小，`check` 操作用于判断是左子节点还是右子节点，$0$ 表示左子节点，$1$ 表示右子节点。
 
-### 旋转
+## `rotate` 操作
 
 如图：
 
 ![](/img/2025/01/020.svg)
 
-（其实这张图如果画成“$2$ 不动，$1$ 代替 $5$ 的位置，$5$ 挂在 $1$ 的左下方”会好理解一点）
+先考虑**右旋**如何操作。
 
-以**右旋**（将左子节点转上去）为例：
+图中需要将 $1$ 挂到 $2$ 的右子树上，再将 $5$ 挂到 $1$ 的左子树上。
 
-令待旋转节点 $x$ 的父节点为 $y$，$x$ 为 $y$ 的**左**子节点。（图中 $x=2,y=1$）
+推广到一般情况，需要对节点 $x$ 进行 `rotate` 操作，记 $y=\textit{father}_x,z=\textit{father}_y$。
 
-我们需要实现：
+则需要**断边** $(z,y),(y,x),(x,\textit{child}_{x,1})$，**连边** $(z,x),(x,y),(y,\textit{child}_{x,1})$。且此时 $y$ 为新的 $\textit{child}_{x,1}$，原来的 $\textit{child}_{x,1}$ 为新的 $\textit{child}_{y,0}$。
 
-1. 若 $x$ 右子节点：
+注意需要同时更新 $\textit{child}_0,\textit{child}_1$ 和 $\textit{father}$，并且**不要影响 $0$ 号节点**，需要特判。
 
-   让 $y$ 的左子节点指向 $x$ 的右子节点，让其父节点指向 $y$。
+***
 
-   否则：清除 $y$ 的左子节点。
+显然，右旋是将左子节点旋转上去，左旋是将右子节点旋转上去。且左旋是与右旋相对的，因此可以通过判断 $x$ 是 $\textit{father}_x$ 的左子节点还是右子节点，从而判断是左旋还是右旋。
 
-2. 让 $x$ 的右子节点指向 $y$，让 $y$ 的父节点指向 $x$。
-
-3. 若 $y$ 存在父节点 $z$：
-
-   将 $z$ 的左子节点或右子节点（取决于 $y$ 是左子节点还是右子节点，同 $y$）指向 $x$，让 $x$ 的父节点指向 $z$。
-
-参考代码：
+**一定要注意节点信息更改的顺序**。记 $y=\textit{father}_x,z=\textit{father}_y$，则修改 $\textit{child}_z$ 之前不应当修改 $y$ 的父节点，否则 `check` 函数无法正确判断。同时，**不要修改 $0$ 节点的信息**。
 
 ```cpp
-void rotateRight(int x){
-    int y=t[x].father;
-    if(t[x].child[1]){
-        t[y].child[0]=t[x].child[1];
-        t[t[y].child[0]].father=y;
-    }else{
-        t[y].child[0]=0;
-    }
-    t[x].child[1]=y;
-    t[y].father=x;
-    int z=t[y].father;
+void rotate(int x){
+    int y=t[x].father,z=t[y].father;
+    bool mode=check(x);
+    t[y].child[mode]=t[x].child[!mode];
+    t[x].child[!mode]=y;
     if(z){
         t[z].child[check(y)]=x;
-        t[x].father=z;
     }
-    up(y);up(x);
-}
-```
-
-若是我们给**左旋**同样写一个 `rotateLeft(x)`，就会很麻烦。
-
-但是注意到，只有**左子节点**会**右旋**，只有**右子节点**会**左旋**，因此我们可以合并两个函数：
-
-```cpp
-void rotate(int x){
-    //右旋 
-    if(!check(x)){
-        int y=t[x].father;
-        if(t[x].child[1]){
-            t[y].child[0]=t[x].child[1];
-            t[t[y].child[0]].father=y;
-        }else{
-            t[y].child[0]=0;
-        }
-        t[x].child[1]=y;
-        t[y].father=x;
-        int z=t[y].father;
-        if(z){
-            t[z].child[check(y)]=x;
-            t[x].father=z;
-        }
-        up(y);up(x);
+    if(t[y].child[mode]){
+        t[t[y].child[mode]].father=y;
     }
-    //左旋
-    else{
-        int y=t[x].father;
-        if(t[x].child[0]){
-            t[y].child[1]=t[x].child[0];
-            t[t[y].child[1]].father=y;
-        }else{
-            t[y].child[1]=0;
-        }
-        t[x].child[0]=y;
-        t[y].father=x;
-        int z=t[y].father;
-        if(z){
-            t[z].child[check(y)]=x;
-            t[x].father=z;
-        }
-        up(y);up(x);
-    } 
-}
-```
-
-但是仍然很长，可以提出相同的式子继续简化：
-
-```cpp
-void rotate(int x){
-    int y=t[x].father;
-    int z=t[y].father;
-    //右旋 
-    if(!check(x)){
-        if(t[x].child[1]){
-            t[y].child[0]=t[x].child[1];
-            t[t[y].child[0]].father=y;
-        }else{
-            t[y].child[0]=0;
-        }
-        t[x].child[1]=y;
-    }
-    //左旋
-    else{
-        if(t[x].child[0]){
-            t[y].child[1]=t[x].child[0];
-            t[t[y].child[1]].father=y;
-        }else{
-            t[y].child[1]=0;
-        }
-        t[x].child[0]=y;
-    }
-    t[y].father=x;
-    if(z){
-        t[z].child[check(y)]=x;
-        t[x].father=z;
-    }
-    up(y);up(x);
-}
-```
-
-我们可以发现，`if` 和 `else` 种大部分也是相同的，区别仅仅在于 `[]` 中的 $0$ 和 $1$。
-
-因此我们可以继续简化：
-
-```cpp
-void rotate(int x){
-    int y=t[x].father;
-    int z=t[y].father;
-    bool mode=check(x)^1; 
-    t[y].child[mode^1]=t[x].child[mode];
-    if(t[x].child[mode])t[t[x].child[mode]].father=y;
-    t[x].child[mode]=y;
-    t[y].father=x;
+    t[y].father=x; 
     t[x].father=z;
-    if(z)t[z].child[check(y)]=x;
+    up(y);
+    up(x);
 }
 ```
 
-# Splay 操作
+## `splay` 操作
 
-Splay 规定：每访问一个节点 $x$ 后都应当将其旋转至**根节点**。
+`splay` 操作是 Splay 树的**核心操作**。如同 FHQ Treap 的 `split` 操作与 `merge` 操作。
 
-## 旋转：zig 与 zag
+`splay` 操作用于将节点 $x$ 通过 `rotate` 操作旋转至根节点。
+
+假设对 $x$ 进行 `splay` 操作，记 $p$ 为本次 `rotate` 操作之前的 $\textit{father}_x$，$g$ 为本次 `rotate` 操作之前的 $\textit{father}_p$。
 
 <details class="info" open>
     <summary>zig 与 zag</summary>
@@ -249,129 +132,103 @@ Splay 规定：每访问一个节点 $x$ 后都应当将其旋转至**根节点*
         zig 指代<a href="/2025/01/21/9/#旋转">此处</a>的<b>右</b>旋（<b>将左孩子转上去</b>），zag 指代<b>左</b>旋（<b>将右孩子转下来</b>）。
     </p>
 </details>
-zig 和 zag 的旋转方式在不同的地方是不同的。同 “左旋”“右旋”。
 
-同样可以参考[此处 AVL 树的旋转](/2025/01/21/9/#旋转)。
+`splay` 操作中途有三种具体操作：
 
-## 三种旋转情况
+* zig 与 zag 操作：当 $p$ 为**根节点**时，直接 `rotate` 一次即可。
 
-假定存在节点 $x$，需要对 $x$ 进行 Splay 步骤。
+  ![](/img/2025/01/021.svg)
 
-令节点 $x$ 的父节点为节点 $p$，节点 $p$ 的父节点为节点 $g$。
+* zig-zig 与 zag-zag 操作：当 $p$ 不为根节点，且 $x,p$ 为**同侧子节点**时，先 `rotate` 一次 $p$，再 `rotate` 一次 $x$ 即可。
 
-这一部分的”旋转“都是左旋或右旋，参考 `rotate()` 函数
+  如图：
 
-### zig 与 zag
+  ![](/img/2025/01/022.svg)
 
-当节点 $p$ 为根节点时操作，直接旋转将 $x$ 旋转到根节点，结束 Splay 步骤。
+* zig-zag 与 zag-zig 操作：当 $p$ 不为根节点，且 $x,p$ 为**异侧子节点**时，先 `rotate` 一次 $x$，此时 $\textit{father}_x=g$，再 `rotate` 一次 $x$ 即可。
 
-如图：右图中 $x$ 为根节点。
+  如图：
 
-![](/img/2025/01/021.svg)
-
-### zig-zig 与 zag-zag
-
-当节点 $p$ 不是根节点（即节点 $g$ 存在）且节点 $p,x$ **同侧**（都是左子节点或都是右子节点）时操作。
-
-先将节点 $p$ 旋转，带动节点 $x$ 向上后再将节点 $x$ 旋转，最终使节点 $x$ 达到**原本节点 $g$ 的位置**，而节点 $x$ 的两个子节点也上升了。
-
-如图：
-
-![](/img/2025/01/022.svg)
-
-### zig-zag 与 zag-zig
-
-当节点 $p$ 不是根节点（即节点 $g$ 存在）且节点 $p,x$ **异侧**（都是左子节点或都是右子节点）时操作。
-
-先将节点 $x$ 旋转，让 $p$ 成为 $x$ 的子节点，然后再次旋转节点 $x$ 带动节点 $p$ 上升，进而能够使节点 $x$ 的两个子节点都能上升。
-
-![](/img/2025/01/023.png)
-
-## 实现代码
+  ![](/img/2025/01/023.png)
 
 ```cpp
-void Splay(int p){
-    for(int father=t[p].father;father=t[p].father;rotate(p)){
-        if(t[father].father){
-            if(check(p)==check(father))rotate(father);
-            else rotate(p);
+int splay(int x){
+    while(t[x].father){
+        int p=t[x].father;
+        if(!t[p].father){
+            rotate(x);
+            break;
         }
-    }root=p;
+        if(check(p)==check(x)){
+            rotate(p);
+            rotate(x);
+        }else{
+            rotate(x);
+            rotate(x);
+        }
+    }
+    return x;
 }
 ```
 
-### 代码解析
+## 查找元素
 
-为了配合整份代码的命名风格，代码中的 `father` 同 $p$，代码中的 `p` 同 $x$。
+Splay 与 FHQ Treap 暴力分裂不同，Splay 的很多操作都是在 BST 上完成的，因此需要**在 BST 上查找元素**。查找完成后，将其 `splay` 到根节点，也有利于各种操作的实现。
 
-很明显，三种情况最后都需要 `ratate(p)`，放在 `for` 的末尾执行。
+特别地，若查询值为 $x$ 的节点不存在时，应当查找到其前驱/后继节点。
 
-当 `father` 不存在时，`p` 为根节点，结束循环。
+```cpp
+int find(int x){
+    int p=root;
+    while(true){
+        if(t[p].value==x){
+            break;
+        }else if(x<t[p].value){
+            if(!t[p].child[0]){
+                break;
+            }else{
+                p=t[p].child[0];
+            }
+        }else{
+            if(!t[p].child[1]){
+                break;
+            }else{
+                p=t[p].child[1];
+            }
+        } 
+    }
+    return root=splay(p);
+}
+```
 
-循环内部判断 `t[father].father`（`x` 的祖先节点）是否存在，若存在，代表可能是二、三两种情况。随后判断同侧、异侧再旋转 `father` 或 `p` 即可。
+同样不难写出按排名查找的代码：
 
-# 功能实现
+```cpp
+int kth(int k,int p=root){
+    while(true){
+        if(t[t[p].child[0]].size+1<=k&&k<=t[t[p].child[0]].size+t[p].cnt){
+            break;
+        }else if(k<t[t[p].child[0]].size+1){
+            p=t[p].child[0];
+        }else{
+            k-=t[t[p].child[0]].size+t[p].cnt;
+            p=t[p].child[1]; 
+        }
+    }
+    root=splay(p);
+    return t[root].value;
+}
+```
+
+# Splay 平衡树操作
 
 ## 插入节点
 
-### 创建节点
+比较简单，在 BST 上查找，最终要么找到值同样为 $x$ 的节点，修改 $\textit{cnt}$ 即可；否则最终会找到一个**空节点**，创建节点并挂到父节点上，再 `splay` 到根节点即可。
 
-在插入之前，需要先创建一个新节点。
+注意插入完成后要进行一次 `up` 操作。特判空树。
 
-代码也很简单，与其他平衡树差不多：
-
-```cpp
-int create(int x){
-    static int top;
-    t[++top]={0,0,0,x,1,1};
-    return top;
-}
-```
-
-### 插入节点
-
-在 Splay 中插入一个节点，需要先在 Splay 树上找到对应的位置。
-
-其实就是沿袭 BST 的思路，注意树为空时直接插入。
-
-```cpp
-void insert(int x){
-    if(!root){
-        root=create(x);
-        return;
-    }
-    int p=root;
-    while(true){
-        if(t[p].value<x){
-            if(t[p].child[1])p=t[p].child[1];
-            else{
-                int q=create(x);
-                t[p].child[1]=q;
-                t[q].father = p;
-                Splay(q);
-                break;
-            }
-        }else if(t[p].value>x){
-            if(t[p].child[0])p=t[p].child[0];
-            else{
-                int q=create(x);
-                t[p].child[0]=q;
-                t[q].father = p;
-                Splay(q);
-                break;
-            }
-        }else{
-            t[p].cnt++;
-            Splay(p);
-            break;
-        }
-    }
-}
-```
-
-但是，这样未免太冗长了，发现 `t[p].value<x` 和 `t[p].value>x` 很像，可以合并：
-
-```cpp
+```cpp\
 void insert(int x){
     if(!root){
         root=create(x);
@@ -382,16 +239,383 @@ void insert(int x){
         if(t[p].value==x){
             t[p].cnt++;
             break;
-        }else{
-            bool mode=t[p].value<x;
-            if(t[p].child[mode])p=t[p].child[mode];
-            else{
-                t[p].child[mode]=create(x,p);
-                p=t[p].child[mode]; 
+        }else if(x<t[p].value){
+            if(!t[p].child[0]){
+                t[p].child[0]=create(x);
+                t[t[p].child[0]].father=p;
+                p=t[p].child[0];
                 break;
+            }else{
+                p=t[p].child[0];
+            }
+        }else{
+            if(!t[p].child[1]){
+                t[p].child[1]=create(x);
+                t[t[p].child[1]].father=p;
+                p=t[p].child[1];
+                break;
+            }else{
+                p=t[p].child[1];
             }
         }
-    }Splay(p);
+    }
+    up(p);
+    root=splay(p);
 }
 ```
 
+## 删除节点
+
+通过 `find` 找到待删除节点，旋转到根节点。
+
+* 若根节点的值不是待删除节点，结束操作。
+
+* 否则将 $\textit{cnt}_{\textit{root}},\textit{size}_{\textit{root}}$ 减去 $1$。
+
+  * 若此时 $\textit{cnt}_{\textit{root}}\neq0$，结束操作。
+
+  * 否则若 $\textit{cnt}_{\textit{root}}=0$，则**根节点实际上应当被删除**。
+
+    那么此时的两个子节点 $p,q$ 就成为了**独立的两棵子树**，需要将其**合并**。钦定子树 $p$ 的值均小于子树 $q$ 的值。
+
+    那么，从子树 $q$ 中找到一个**最小值**，将其 `splay` 到 $q$ 的父节点，成为新的 $\textit{root}$ 即可。此时 $p,q$ 分别为 $\textit{root}$ 的左右子节点。
+
+```cpp
+void erase(int x){
+    find(x);
+    if(t[root].value!=x){
+        return;
+    }
+    t[root].cnt--;
+    t[root].size--;
+    if(t[root].cnt){
+        return;
+    }
+    int p=t[root].child[0],q=t[root].child[1];
+    t[p].father=t[q].father=0;
+    if(!p||!q){
+        root=p|q;
+        return;
+    }
+    kth(1,q);
+    t[root].child[0]=p;
+    t[p].father=root;
+    up(root);
+}
+```
+
+## 查询排名
+
+令待查询节点为 $x$。
+
+首先可以通过 `find` 找出其 $x$ 或者前驱/后继，并旋转到根节点 $\textit{root}$。
+
+* 若 $\textit{value}_{\textit{root}}<x$，则**说明 $\textit{root}$ 是 $x$ 的前驱**，因此可以直接得到答案 $\textit{size}_{\textit{child}_{\textit{root},0}}+\textit{cnt}_{\textit{root}}+1$。
+
+* 否则 $x\leq\textit{value}_{\textit{root}}$，则**说明左子树 $\textit{child}_{\textit{root},0}$ 内即所有小于 $x$ 的数**。因此可以得到答案 $\textit{size}_{\textit{child}_{\textit{root},0}}+1$。
+
+```cpp
+int rank(int x){
+    find(x);
+    if(t[root].value<x){
+        return t[t[root].child[0]].size+t[root].cnt+1;
+    }else{
+        return t[t[root].child[0]].size+1;
+    }
+}
+```
+
+## 查询前驱
+
+首先显然可以 `find` 一次。若 $\textit{value}_{\textit{root}}<x$，则说明 $\textit{root}$ 是 $x$ 的前驱，答案即 $\textit{value}_{\textit{root}}$。
+
+否则答案即**左子树中的最大值**。
+
+```cpp
+int prev(int x){
+    find(x);
+    if(t[root].value<x){
+        return t[root].value;
+    }
+    int p=t[root].child[0];
+    while(t[p].child[1]){
+        p=t[p].child[1];
+    }
+    root=splay(p);
+    return t[root].value;
+}
+```
+
+## 查询后继
+
+与查询前驱同理。
+
+```cpp
+int next(int x){
+    find(x);
+    if(x<t[root].value){
+        return t[root].value;
+    }
+    int p=t[root].child[1];
+    while(t[p].child[0]){
+        p=t[p].child[0];
+    }
+    root=splay(p);
+    return t[root].value;
+}
+```
+
+# 例题 AC 代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e5;
+struct Splay{
+	static int root;
+	int size;
+	struct node{
+		int value,cnt;
+		int size,father,child[2];
+	}t[N+1];
+	
+	void up(int p){
+		t[p].size=t[t[p].child[0]].size+t[p].cnt+t[t[p].child[1]].size;
+	}
+	bool check(int p){
+		return t[t[p].father].child[1]==p;
+	}
+	void rotate(int x){
+		int y=t[x].father,z=t[y].father;
+		bool mode=check(x);
+		t[y].child[mode]=t[x].child[!mode];
+		t[x].child[!mode]=y;
+		if(z){
+			t[z].child[check(y)]=x;
+		}
+		if(t[y].child[mode]){
+			t[t[y].child[mode]].father=y;
+		}
+		t[y].father=x; 
+		t[x].father=z;
+		up(y);
+		up(x);
+	}
+	int splay(int x){
+		while(t[x].father){
+			int p=t[x].father;
+			if(!t[p].father){
+				rotate(x);
+				break;
+			}
+			if(check(p)==check(x)){
+				rotate(p);
+				rotate(x);
+			}else{
+				rotate(x);
+				rotate(x);
+			}
+		}
+		return x;
+	}
+	int create(int x){
+		t[++size]={x,1,1};
+		return size;
+	}
+	void insert(int x){
+		if(!root){
+			root=create(x);
+			return;
+		}
+		int p=root;
+		while(true){
+			if(t[p].value==x){
+				t[p].cnt++;
+				break;
+			}else if(x<t[p].value){
+				if(!t[p].child[0]){
+					t[p].child[0]=create(x);
+					t[t[p].child[0]].father=p;
+					p=t[p].child[0];
+					break;
+				}else{
+					p=t[p].child[0];
+				}
+			}else{
+				if(!t[p].child[1]){
+					t[p].child[1]=create(x);
+					t[t[p].child[1]].father=p;
+					p=t[p].child[1];
+					break;
+				}else{
+					p=t[p].child[1];
+				}
+			}
+		}
+		up(p);
+		root=splay(p);
+	}
+	int find(int x){
+		int p=root;
+		while(true){
+			if(t[p].value==x){
+				break;
+			}else if(x<t[p].value){
+				if(!t[p].child[0]){
+					break;
+				}else{
+					p=t[p].child[0];
+				}
+			}else{
+				if(!t[p].child[1]){
+					break;
+				}else{
+					p=t[p].child[1];
+				}
+			} 
+		}
+		return root=splay(p);
+	}
+	void erase(int x){
+		find(x);
+		if(t[root].value!=x){
+			return;
+		}
+		t[root].cnt--;
+		t[root].size--;
+		if(t[root].cnt){
+			return;
+		}
+		int p=t[root].child[0],q=t[root].child[1];
+		t[p].father=t[q].father=0;
+		if(!p||!q){
+			root=p|q;
+			return;
+		}
+		kth(1,q);
+		t[root].child[0]=p;
+		t[p].father=root;
+		up(root);
+	}
+	int rank(int x){
+		find(x);
+		if(t[root].value<x){
+			return t[t[root].child[0]].size+t[root].cnt+1;
+		}else{
+			return t[t[root].child[0]].size+1;
+		}
+	}
+	int kth(int k,int p=root){
+		while(true){
+			if(t[t[p].child[0]].size+1<=k&&k<=t[t[p].child[0]].size+t[p].cnt){
+				break;
+			}else if(k<t[t[p].child[0]].size+1){
+				p=t[p].child[0];
+			}else{
+				k-=t[t[p].child[0]].size+t[p].cnt;
+				p=t[p].child[1]; 
+			}
+		}
+		root=splay(p);
+		return t[root].value;
+	}
+	int prev(int x){
+		find(x);
+		if(t[root].value<x){
+			return t[root].value;
+		}
+		int p=t[root].child[0];
+		while(t[p].child[1]){
+			p=t[p].child[1];
+		}
+		root=splay(p);
+		return t[root].value;
+	}
+	int next(int x){
+		find(x);
+		if(x<t[root].value){
+			return t[root].value;
+		}
+		int p=t[root].child[1];
+		while(t[p].child[0]){
+			p=t[p].child[0];
+		}
+		root=splay(p);
+		return t[root].value;
+	}
+	void print(int p=root){
+		if(!p){
+			return;
+		}
+		print(t[p].child[0]);
+		for(int i=1;i<=t[p].cnt;i++){
+			cerr<<t[p].value<<' ';
+		}
+		print(t[p].child[1]);
+	}
+}t;
+int Splay::root;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int n;
+	cin>>n;
+	while(n--){
+		int opt,x;
+		cin>>opt>>x;
+		switch(opt){
+			case 1:
+				t.insert(x);
+				break;
+			case 2:
+				t.erase(x);
+				break;
+			case 3:
+				cout<<t.rank(x)<<'\n';
+				break;
+			case 4:
+				cout<<t.kth(x)<<'\n';
+				break;
+			case 5:
+				cout<<t.prev(x)<<'\n';
+				break;
+			case 6:
+				cout<<t.next(x)<<'\n';
+				break;
+		}
+	}
+	
+	cout.flush();
+	 
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+# Splay 与可持久化
+
+Splay 是不能可持久化的，因为 Splay 的复杂度是基于势能均摊得到的。
+
+**只有复杂度严格一致或是期望一致的数据结构才能可持久化**。
+
+否则例如 Splay，可以构造一种情况需要将深度为 $\mathcal O(n)$ 的节点 `splay` 到根节点，可持久化每一次都是这个版本，复杂度就变为了 $\mathcal O(mn)$。
+
+~~所以还是写 FHQ Treap 吧。~~
