--- a/_posts/2025-8-22-2.md
+++ b/_posts/2025-8-22-2.md
@@ -26,7 +26,7 @@ words:
 
 确定最小边的一个端点 $x$，求出 $x\sim t$ 的最小权值和最小的链的权值和 $\textit{sum}$ 和链长 $k$ 即可。答案即 $\textit{sum}+(n-k-1)w$。$w$ 为最小边权。
 
-注意到 $x\sim t$ 链上边权除开最后一条边是**单调不降**的，否则可以将其放到 $x$ 之后的树上更优。
+注意到 $x\sim t$ 链上边权除开最后一条边，是**单调不降**的，否则可以将其放到 $x$ 之后的树上更优。
 
 因此链上每一条边的贡献都是自己的 $1$ 倍，跑最短路即可。
 
